compil error 1
In file included from /home/pi/midiMind/backend/src/core/Application.h:26,
                 from /home/pi/midiMind/backend/src/main.cpp:35:
/home/pi/midiMind/backend/src/core/../midi/devices/MidiDeviceManager.h:26:10: fatal error: DeviceInfo.h: No such file or directory
   26 | #include "DeviceInfo.h"
      |          ^~~~~~~~~~~~~~
compilation terminated.
In file included from /home/pi/midiMind/backend/src/core/Application.h:26,
                 from /home/pi/midiMind/backend/src/core/Application.cpp:39:
/home/pi/midiMind/backend/src/core/../midi/devices/MidiDeviceManager.h:26:10: fatal error: DeviceInfo.h: No such file or directory
   26 | #include "DeviceInfo.h"
      |          ^~~~~~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/midimind.dir/build.make:79: CMakeFiles/midimind.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/midimind.dir/build.make:93: CMakeFiles/midimind.dir/src/core/Application.cpp.o] Error 1
In file included from /home/pi/midiMind/backend/src/api/CommandProcessorV2.h:47,
                 from /home/pi/midiMind/backend/src/api/CommandProcessorV2.cpp:40:
/home/pi/midiMind/backend/src/api/../midi/devices/MidiDeviceManager.h:26:10: fatal error: DeviceInfo.h: No such file or directory
   26 | #include "DeviceInfo.h"
      |          ^~~~~~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/midimind.dir/build.make:121: CMakeFiles/midimind.dir/src/api/CommandProcessorV2.cpp.o] Error 1
In file included from /home/pi/midiMind/backend/src/api/ApiServer.h:32,
                 from /home/pi/midiMind/backend/src/api/ApiServer.cpp:39:
/home/pi/midiMind/backend/src/api/Protocol.h: In member function ‘json midiMind::protocol::Event::toJson() const’:
/home/pi/midiMind/backend/src/api/Protocol.h:253:25: error: ‘priorityToString’ was not declared in this scope
  253 |         j["priority"] = priorityToString(priority);
      |                         ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/Protocol.h: In static member function ‘static midiMind::protocol::Event midiMind::protocol::Event::fromJson(const json&)’:
/home/pi/midiMind/backend/src/api/Protocol.h:261:24: error: ‘stringToPriority’ was not declared in this scope
  261 |         evt.priority = stringToPriority(j.value("priority", "normal"));
      |                        ^~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/midimind.dir/build.make:107: CMakeFiles/midimind.dir/src/api/ApiServer.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:156: all] Error 2
